Fix server crash: java.lang.RuntimeException: java.lang.RuntimeException Fix durability bug Fix some visual bugs Fix runic table Add LVLUP chat message